[package]
name = "github_heatmap"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
unescape = "0.1.0"
graphql_client = { version = "0.14.0", features = ["reqwest-blocking"] }
serde = "1.0.219"
reqwest = { version  = "0.11.27", features = ["blocking", "json"] }
owo-colors = "4.2.0"
clap = { version = "4.5.35", features = ["derive"] }
unicode-width = "0.2.0"
